@@ -1,5 +1,6 @@
 === ongoing ===
 
+- Added InitiativePersonRole model and inline admin
 - Copied and renamed everything from django-multilingual-orgs
 
 === 0.1 ===
